<resources>
    <string name="app_name">BlackCoffer InternTest</string>
    <string name="refine_header1">Select Your Availability</string>
    <string name="refine_header2">Add Your Status</string>
    <string name="status_text">Hi community!  I am open to new connections "'&#128522;'"</string>
    <string name="refine_header3">Select Hyper local Distance</string>
    <string name="distance">describes km selected by user. current selected is "1"</string>
    <string name="mindistance">1km</string>
    <string name="maxdistance">100km</string>
    <string name="refine_header4">Select Purpose</string>
    <string name="button">Save&amp;Explore</string>
    <string name="coffee">coffee</string>
    <string name="business">Business</string>
    <string name="Hobbies">Hobbies</string>
    <string name="friendship">Friendship</string>
    <string name="Movies">Movies</string>
    <string name="Dinning">Dinning</string>
    <string name="Dating">Dating</string>
    <string name="Matrimony">Matrimony</string>
    <string name="personal">Personal</string>
    <string name="services">Services</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore">Explore</string>
    <string name="connectio">Connectio</string>
    <string name="chat">Chat</string>
    <string name="contact">Contact</string>
    <string name="group">Group</string>
    <string name="search_hint">Search</string>
    <string name="fetch">Sai Sudheer</string>
    <string name="btn">&#9797;</string>
    <string name="note">please press top right filter icon to navigate from explore screen to refine screen</string>


</resources>