<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/explore"
        android:icon="@drawable/baseline_remove_red_eye_24"
        android:title="@string/explore" />

    <item
        android:id="@+id/connectio"
        android:icon="@drawable/baseline_connect_without_contact_24"
        android:title="@string/connectio" />

    <item
        android:id="@+id/chat"
        android:icon="@drawable/baseline_chat_24"
        android:title="@string/chat" />

    <item
        android:id="@+id/conatact"
        android:icon="@drawable/baseline_connect_without_contact_24"
        android:title="@string/contact" />

    <item
        android:id="@+id/group"
        android:icon="@drawable/baseline_grid_3x3_24"
        android:title="@string/group" />
</menu>